# swagger/swagger.yaml
@@ -88,4 +88,37 @@ paths:
       x-tags:
       - tag: "default"
 
+  /Catalog/:
+    get:
+      tags:
+      - "default"
+      description: "Returns a catalog of rackmount servers"
+      operationId: "controllers.default_controller.getCatalog"
+      parameters:
+      - name: "host"
+        in: "query"
+        description: "USC manger host name or IP"
+        required: false
+        type: "string"
+      - name: "user"
+        in: "query"
+        description: "UCS manger user name"
+        required: false
+        type: "string"
+      - name: "password"
+        in: "query"
+        description: "UCS manger user password"
+        required: false
+        type: "string"
+      - name: "identifier"
+        in: "query"
+        description: "UCS element dn"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful data fetch of rackmount catalogs"
+      x-tags:
+      - tag: "default"
+
 definitions: {}
